# fashionapp

./: README.md  app.py  index.html  model.py  pyproject.toml  requirements.txt
Reccomendation_model/: Data_Sources_Link.docx  Final_model.py.py  Raw_Data.rtf  Text_Refining.ipynb  bottomwear_recommendations.csv  colors_for_cool_undertone.csv  colors_for_warm_undertone.csv  dresses_recommendations.csv  model.ipynb
templates/: Hourglass_Cool.html  Hourglass_Warm.html  Oval_Cool.html  Oval_Warm.html  Pear_Cool.html  Pear_Warm.html  home.html  index.css  index.html  index.js  itsmymantra.html  jobitem.html  result.html  style.css  style1.css
