[tool.poetry]
name = "repl-nix-fashionapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_fashionapp"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
werkzeug = "^3.0.3"
openai = "^1.35.13"
langchain = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
